bugfix: fill screen on mobile

--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -80,12 +80,12 @@ h6 {
   .description {
     font-family: 'Big Noodle Titling';
     font-size: 2rem;
-    margin: 2%;
+    margin: 1%;
   }
 
   .title {
     font-family: 'Big Noodle Titling Oblique';
     font-size: 3rem;
-    margin: 10% 5% 5%;
+    margin: 1%;
   }
 }
